Add registration page and improve user login
