# Risager-Manager/Controllers/UserController.cs
@@ -1,6 +1,8 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using Microsoft.AspNetCore.Identity;
+using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
 using RisagerManagerServer.Models;
+using System.Security.Claims;
 
 namespace RisagerManagerServer.Controllers
 {
@@ -8,10 +10,12 @@ namespace RisagerManagerServer.Controllers
     [ApiController]
     public class UserController : Controller
     {
+        public readonly UserManager<User> _userManager;
         private readonly RisagerContext _context;
-        public UserController(RisagerContext context)
+        public UserController(RisagerContext context, UserManager<User> userManager)
         {
             _context = context;
+            _userManager = userManager;
         }
 
         [HttpGet(nameof(GetUser))]
@@ -19,5 +23,26 @@ namespace RisagerManagerServer.Controllers
         {
             return await _context.User.FirstOrDefaultAsync(x => x.Id.Equals(id));
         }
+        [HttpGet(nameof(GetCurrentUser))]
+        public async Task<User?> GetCurrentUser()
+        {
+            var userId = User.FindFirstValue(ClaimTypes.NameIdentifier);
+            if (userId == null) { return null; }
+            return await _context.Users.FirstOrDefaultAsync(x => x.Id.Equals(userId));
+        }
+        [HttpPost(nameof(SetUsername))]
+        public async Task SetUsername(string email, string newUsername)
+        {
+            var currentUser = await _userManager.FindByEmailAsync(email);
+            var contextUser = await _context.User.FirstAsync(x => x.Email.Equals(currentUser.Email));
+            contextUser.UserName = newUsername;
+            _context.SaveChanges();
+        }
+        
+    [HttpPost(nameof(Logout))]
+    public async Task Logout()
+    {
+        this.Response.Cookies.Delete(".AspNetCore.Identity.Application", new CookieOptions { Secure = true });
     }
+}
 }
